--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ body::before {
 .navbar-nav .humberger-menu {
   display: none;
   color: #46bd86;
-  font-size: 22px;
+  font-size: 27px;
 }
 
 /* hero-section */
@@ -364,12 +364,18 @@ footer {
 
 /* Responsive: mobile phone */
 @media screen and (max-width: 576px) {
+  /* navbar responsive */
   .navbar {
-    padding: 7px;
+    top: 0;
+    border-radius: 0;
+    max-width: 100%;
+    height: 50px;
+    border-left: none;
+    border-right: none;
   }
 
   .navbar-title h1 {
-    font-size: 20px;
+    font-size: 25px;
   }
 
   .navbar-nav ul {
@@ -379,6 +385,39 @@ footer {
   .navbar-nav .humberger-menu {
     display: block;
     cursor: pointer;
+  }
+
+  /* hero section responsive */
+  .hero-section {
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    gap: 5px;
+  }
+
+  .hero-content {
+    max-width: 20rem;
+    padding-left: 0;
+  }
+
+  .hero-image img {
+    width: 24rem;
+  }
+
+  /* about-section responsive */
+  .about-section {
+    flex-direction: column;
+    gap: 3rem;
+  }
+
+  .about-image img {
+    width: 16rem;
+    height: 17rem;
+  }
+
+  /* skills-section responsive */
+  .skills-section {
+    flex-direction: column;
   }
 }
 
